treeview: remove single-click activation from GtkGestureMultiPress::pressed

This is already handled in GtkGestureMultiPress::release, and more in
concordance with how it was done pre-gestures.

https://bugzilla.gnome.org/show_bug.cgi?id=737891